kubernetes/rabbitmq/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        tier: backend
        component: messaging
        app: rabbitmq
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "15692"
    spec:
      containers:
        - name: rabbitmq
          image: yurak/rabbitmq:v0.5.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5672
            - containerPort: 15672
            - containerPort: 15692
          livenessProbe:
            tcpSocket:
              port: 5672
          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - rabbitmq-diagnostics -q ping
