kubernetes/rabbitmq/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rabbitmq
spec:
  rules:
    - host: rabbitmq.management.minikube
      http:
        paths:
          - path:
            backend:
              serviceName: rabbitmq
              servicePort: 15672
